--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "klaussilveira/gitter": ">=0.2.0"
+        "klaussilveira/gitter": ">=0.2.0",
+		"michelf/php-markdown": ">=1.3.0"
     },
     "require-dev": {
     },
