--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,9 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "klaussilveira/gitter": ">=0.2.0",
-		"michelf/php-markdown": ">=1.3.0"
+        "klaussilveira/gitter": ">=0.2",
+		"michelf/php-markdown": ">=1.3",
+		"symfony/yaml": ">=2.3"
     },
     "require-dev": {
     },
