.htaccess for nginx

--- a/.htaccess
+++ b/.htaccess
@@ -1,20 +1,9 @@
 # BEGIN QBoke
 
 # For Apache
-#RewriteRule ^index\.php$ - [L]
-#RewriteCond %{REQUEST_FILENAME} !-f
-#RewriteCond %{REQUEST_FILENAME} !-d
-#RewriteRule . /index.php [L]
-
-# For Nginx
-if (!-d $request_filename){
-	set $fd nd;
-}
-if (!-f $request_filename){
-	set $fd nf$fd;
-}
-if ($fd = "nfnd"){
-	rewrite (.*) /index.php last;
-}
+RewriteRule ^index\.php$ - [L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule . /index.php [L]
 
 # END QBoke
