--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
 	"name": "soli/qboke",
-	"description": "Blogging with markdown, git and other awesome stuff.",
-	"keywords": ["blog", "markdown", "git", "vcs"],
+	"description": "Plain and Simple.",
+	"keywords": ["blog", "markdown", "git", "php"],
 	"homepage": "http://www.qboke.org",
-	"type": "project",
+	"type": "library",
 	"license": "BSD-2-Clause",
 	"authors": [
 		{
@@ -15,19 +15,14 @@
 	],
 	"require": {
 		"php": ">=5.3.0",
-		"klaussilveira/gitter": ">=0.2",
-		"michelf/php-markdown": ">=1.3",
-		"symfony/yaml": ">=2.3"
-	},
-	"require-dev": {
+		"klaussilveira/gitter": "~0.2",
+		"michelf/php-markdown": "~1.3",
+		"symfony/yaml": "~2.3"
 	},
 	"autoload": {
 		"psr-4": {
 			"QBoke\\": "src/"
 		}
-	},
-	"scripts": {
-		"post-create-project-cmd": "QBoke\\Installer::postCreateProject"
 	},
 	"config": {
 		"preferred-install": "dist"
