fix bug of comments plugin;

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
 		{
 			"name": "Soli",
 			"email": "soli@cbug.org",
-			"homepage": "http://www.cbug.org/",
+			"homepage": "https://solicomo.com",
 			"role": "Developer"
 		}
 	],
